--- a/160513_02_WebDataTrans/WebContent/html/join_input.html
+++ b/160513_02_WebDataTrans/WebContent/html/join_input.html
@@ -17,7 +17,7 @@ td {
 <title>회원가입</title>
 </head>
 <body>
-	<form action="../Join.do" method="post" name="form1">
+	<form action="../Join.do" method="get" name="form1">
 		<table>
 			<tr>
 				<td>아이디 </td>
@@ -46,11 +46,12 @@ td {
 				<td>이메일</td>
 				<td><input type="text" id="userEmail1" name="userEmail1" />&nbsp;
 				<input type="text" id="userEmail2" name="userEmail2" placeholder="@email.com" />&nbsp;
-				<select>
-				<option> naver.com</option>
-				<option> daum.net</option>
-				<option> gmail.com</option>
-				<option> nate.com</option>
+				<select id="emailSelected" onchange="OnclickEmailSelected()" >
+				<option value="1" selected="selected">직접입력</option>
+				<option value="naver.com">naver.com</option>
+				<option value="daum.net">daum.net</option>
+				<option value="gmail.com">gmail.com</option>
+				<option value="nate.com">nate.com</option>
 				</select></td>
 			</tr>
 
